# DLIP_template

./: .gitignore  README.md  pyproject.toml
notebooks/: trained_model_analysis.ipynb
src/dlip/: main.py
src/dlip/conf/: train_model.yaml
src/dlip/models/: evaluation.py  models.py  train_model.py
src/dlip/utils/: logger.py  utils.py
