[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "dlip"
version = "0.0.1"
dependencies = [
    "numpy"]

description = "Framework for training deep learning models using hydra and tensorboard."
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]